fixed layout issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,8 @@ body,
 
 @media (max-width: 768px) {
   .app-content {
-    margin-left: 0;
+    margin-left: 0px;
+    max-width:100vw ;
   }
 }
 
